--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -19,13 +19,15 @@ jobs:
       - name: Checkout GitOps
         uses: actions/checkout@v3
 
+      - run: echo $(yq -V)
+
       - name: Get Solution Repo's
         id: solution-repos
-        run: echo "SOLUTIONS=$(yq eval '.repositories.solutions[]' repositories.yml -o=json)" >> $GITHUB_OUTPUT
+        run: echo "SOLUTIONS=$(yq eval '.repositories.solutions[]' repositories.yml -j)" >> $GITHUB_OUTPUT
 
       - name: Get Solution Repo's
         id: deployment-repos
-        run: echo "DEPLOYMENT=$(yq eval '.repositories.deployment[]' repositories.yml -o=json)" >> $GITHUB_OUTPUT
+        run: echo "DEPLOYMENT=$(yq eval '.repositories.deployment[]' repositories.yml -j)" >> $GITHUB_OUTPUT
 
   make-changes:
     name: Make changes to repos
