Testing using matrix in GitHub Actions

--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Get Solution Repo's
         id: solution-repos
         run: |
-          soln="$(yq eval '.repositories.solutions[]' repositories.yml -o=json)"
+          soln="$(yq eval '.repositories.solutions[]' repositories.yml -o=json | jq -c)"
           echo $soln
           echo "SOLUTIONS=$soln" >> $GITHUB_OUTPUT
 
