Testing using matrix in GitHub Actions

--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           soln="$(yq eval '.repositories.solutions' repositories.yml -o=json | jq -r 'tostring')"
           echo '{"includes":'$soln'}'
-          echo "SOLUTIONS='{\"includes\":'$soln'}' >> $GITHUB_OUTPUT
+          echo "SOLUTIONS='{\"includes\":'$soln'}'" >> $GITHUB_OUTPUT
 
   make-changes:
     name: Make changes to repos
