--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -25,8 +25,8 @@ jobs:
         id: solution-repos
         run: |
           soln="$(yq eval '.repositories.solutions' repositories.yml -o=json | jq -r 'tostring')"
-          echo '{"includes":'$soln'}'
-          echo "SOLUTIONS='{\"includes\":'$soln'}'" >> $GITHUB_OUTPUT
+          echo '{"include":'$soln'}'
+          echo "SOLUTIONS='{\"include\":'$soln'}'" >> $GITHUB_OUTPUT
 
   make-changes:
     name: Make changes to repos
