--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -33,7 +33,7 @@ jobs:
     needs: [get-config]
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(needs.get-config.outputs.matrix-solutions) }}
+      matrix: ${{ needs.get-config.outputs.matrix-solutions }}
 
     steps:
 
