--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Get Solution Repo's
         id: solution-repos
         run: |
-          soln="$(yq eval '.repositories.solutions' repositories.yml -o=json | jq -r 'tostring')"
+          soln="$(yq eval '.repositories.solutions' repositories.yml -o=json | jq -c)"
           echo '{"include":'$soln'}'
           echo "SOLUTIONS='{\"include\":'$soln'}'" >> $GITHUB_OUTPUT
 
@@ -33,7 +33,7 @@ jobs:
     needs: [get-config]
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ needs.get-config.outputs.matrix-solutions }}
+      matrix: ${{ fromJSON('{\"include\":[{\"name\":\"start\",\"repo\":\"base-start\"},{\"name\":\"test\",\"repo\":\"base-start\"}]}') }}
 
     steps:
 
