Testing using matrix in GitHub Actions

--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -33,7 +33,7 @@ jobs:
     needs: [get-config]
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJSON('{\"include\":[{\"name\":\"start\",\"repo\":\"base-start\"},{\"name\":\"test\",\"repo\":\"base-start\"}]}') }}
+      matrix: ${{ fromJSON('{"include":[{"name":"start","repo":"base-start"},{"name":"test","repo":"base-start"}]}') }}
 
     steps:
 
