--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -38,9 +38,17 @@ jobs:
     steps:
 
       - name: Check repo exists
-        run: echo "${{ matrix.repo }}"
+        uses: actions/github-script@v7
+        id: exists
+        with:
+          script: |
+            github.rest.repositories.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,              
+            })
 
-
+      - name: Get result
+        run: echo "${{ steps.exists.outputs.result }}"
 
 
         # '{"include":[{"name":"start","repo":"base-start"},{"name":"test","repo":"base-start"}]}'
