--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -43,8 +43,8 @@ jobs:
         with:
           script: |
             github.rest.repos.get({
-              owner: dr3dr3,
-              repo: base-gitops,              
+              owner: 'dr3dr3',
+              repo: 'base-gitops',              
             })
 
       - name: Get result
