--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/github-script@v7
         id: exists
         with:
+          result-encoding: string
           script: |
             github.rest.repos.get({
               owner: 'dr3dr3',
