--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -38,12 +38,12 @@ jobs:
     steps:
 
       - name: Check repo exists
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         id: exists
         with:
           result-encoding: string
           script: |
-            github.rest.repos.get({
+            await github.rest.repos.get({
               owner: context.repo.owner,
               repo: context.repo.repo
             })
