--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -43,10 +43,7 @@ jobs:
         with:
           result-encoding: string
           script: |
-            await github.rest.repos.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo
-            })
+            await github.rest.users.getAuthenticated()
 
       - name: Get result
         run: echo "${{ steps.exists.outputs.result }}"
