--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -43,9 +43,11 @@ jobs:
         with:
           result-encoding: string
           script: |
-            await github.rest.repos.get({
+            await github.rest.issues.create({
               owner: context.repo.owner,
-              repo: 'ss-gitops'
+              repo: context.repo.repo,
+              title: 'Testing Workflow',
+              body: ${{ matrix.name }}
             })
 
       - name: Result
