--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -34,6 +34,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJSON(needs.get-config.outputs.matrix-solutions) }}
+    permissions: 
+      issues: write
 
     steps:
 
