--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -51,7 +51,7 @@ jobs:
             });
 
       - name: Result
-        run: echo "${{ steps.exists.outputs.result }}"
+        run: echo "${{ toJson(steps.exists.outputs.result) }}"
 
       - name: Echo
         run: echo "${{ matrix.repo }}"
