--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -68,4 +68,4 @@ jobs:
         run: echo '{ ${{ steps.repos-get.outputs.repo }} }'
 
       - name: Console Log
-        run: console.log({ ${{ steps.repos-get.outputs.result }} })
+        run: console.log({ ${{ steps.repos-get.outputs.repo }} })
