--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -65,7 +65,5 @@ jobs:
       #       console.log('test')
 
       - name: Result
-        run: echo '{ ${{ steps.repos-get.outputs.repo }} }'
+        run: echo '${{ steps.repos-get.outputs.repo }}'
 
-      - name: Console Log
-        run: console.log({ ${{ steps.repos-get.outputs.repo }} })
