--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
 
       - name: Install Node dependencies
         run: npm install --no-save @actions/core @actions/github
@@ -51,19 +51,18 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: .github/actions-scripts/repos-get.mjs
 
-      # - name: Check repo exists
-      #   uses: actions/github-script@v7
-      #   id: exists
-      #   with:
-      #     #result-encoding: string
-      #     debug: true
-      #     script: |
-      #       await github.rest.repos.get({
-      #         owner: 'dr3dr3',
-      #         repo: 'base-gitops'
-      #       });
-      #       console.log('test')
+      - name: Check repo exists
+        uses: actions/github-script@v7
+        id: exists
+        with:
+          result-encoding: string
+          debug: true
+          script: |
+            await github.rest.repos.get({
+              owner: 'dr3dr3',
+              repo: 'base-gitops'
+            }).archived;
 
       - name: Result
-        run: echo '${{ steps.repos-get.outputs.repo }}'
+        run: echo '${{ steps.exists.outputs.result }}'
 
