--- a/repositories.yml
+++ b/repositories.yml
@@ -1,8 +1,9 @@
 repositories:
-  host: dr3dr3
   solutions:
     - name: start
-      repo: base-start
+      repo: temp-slidev
+      repo-description: 'Micro-frontend for slides using Sli.dev'
+      repo-template: 'template-slidev'
       status: new
       # new | updated | inactive | removed
       var-CI_PATTERN: TBD_MAIN
@@ -10,19 +11,22 @@ repositories:
       secret-GHA_PAT: true
       secret-IFTTT: true
       ci-deploy-to: GHP
-  core:
-    pipeline:
-      repo: null
-      # Set to null if want to use the shared pipelines below
-      paas: dr3dr3/ss-pipeline
-      # Pipeline-as-a-Service host and repo
+  pipeline:
+    - name: pipeline
+      repo: ss-pipeline
+      repo-description: 'Continuous Delivery Pipeline using GitHub Action Workflows'
+      repo-template: 'template-slidev'
       secret-GHA_PAT: true
   deployment:
-    stage:
+    - name: stage
       repo: devops-demo-stg
+      repo-description: 'Repository for running deployments to Stage'
+      repo-template: 'template-slidev'
       var-GHP_ENV: stg
       var-SITE_URL: https://stg.andredreyer.com/
-    production:
+    - name: production
       repo: devops-demo-prd
+      repo-description: 'Repository for running deployments to Production'
+      repo-template: 'template-slidev'
       var-GHP_ENV: prd
       var-SITE_URL: https://www.andredreyer.com/
