--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -51,8 +51,16 @@ jobs:
           REPO_OWNER: ${{ github.repository_owner	 }}
           REPO_NAME: ${{ matrix.repo }}
 
+      - name: Check template exists
+        id: template-exists
+        run: .github/actions-scripts/repo-check-exists.mjs
+        env:
+          GHA_TOKEN: ${{ secrets.SETUP_PAT }}
+          REPO_OWNER: 'dr3dr3'
+          REPO_NAME: ${{ matrix.repo-template }}
+
       - name: Create repo
-        if: ${{ steps.repo-exists.outputs.result != 'true'  }}
+        if: ${{ steps.repo-exists.outputs.result != 'true'  && steps.template-exists.outputs.result == 'true' }}
         run: .github/actions-scripts/repo-create-using-template.mjs
         env:
           GHA_TOKEN: ${{ secrets.SETUP_PAT }}
