--- a/.github/workflows/repositories-changes.yml
+++ b/.github/workflows/repositories-changes.yml
@@ -69,7 +69,7 @@ jobs:
           REPO_NAME: ${{ matrix.repo }}
           REPO_DESC: ${{ matrix.repo-description }}
 
-      - run: echo '${{ fromJson(matrix.variables) }}'
+      - run: echo '${{ matrix.variables }}'
 
       - name: Create variables
         run: .github/actions-scripts/repo-create-variables.mjs
