--- a/repositories.yml
+++ b/repositories.yml
@@ -14,7 +14,7 @@ repositories:
       repo-description: 'Continuous Delivery Pipeline using GitHub Action Workflows'
       repo-template: 'template-pipeline'
     - name: gitops
-      repo: base-gitops
+      repo: temp-gitops
       repo-description: 'Configuration Management and IaC using GitHub Action Workflows'
       repo-template: 'template-gitops'
   deployment:
