--- a/.github/workflows/repo-variable-changes.yml
+++ b/.github/workflows/repo-variable-changes.yml
@@ -59,3 +59,6 @@ jobs:
           REPO_NAME: ${{ matrix.repo }}
           VAR_NAME: ${{ matrix.name }}
           VAR_VAL: ${{ matrix.value }}
+
+      - name: GHA Summary
+        run: echo "Variable: ${{ matrix.name }} created/updated" >> $GITHUB_STEP_SUMMARY
