--- a/repo-variables.yml
+++ b/repo-variables.yml
@@ -4,16 +4,16 @@ repo-variables:
     value: SLIDEV
   - name: SITE_URL
     repo: temp-slidev
-    value: https://ci-slides.andredreyer.com/
+    value: https://ci-slides.andredreyer.com
   - name: SITE_URL
     repo: temp-stg
-    value: https://stg.andredreyer.com/
+    value: https://stg.andredreyer.com
   - name: SITE_URL
     repo: temp-prd
-    value: https://www.andredreyer.com/
+    value: https://www.andredreyer.com
   - name: CHECK_LINKS
     repo: temp-slidev
-    value: true
+    value: false
   - name: CHECK_LINKS
     repo: temp-stg
     value: true
